--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -1,65 +1,199 @@
-.profile{
-    margin-top: 30px;
+.banner{
+    /* background-color: #00143d; */
+    /* width: 100%;
+    height:20%; */
     display: flex;
+    flex-direction: column; 
+    /* background-color: #00143d; */
+    position: relative;
+    z-index: 1;
+
+    padding:0;
+    margin:0;
+
+    top:0;
+    left:0;
+
+    width: 100%;
+    height: 300px;
+   
+}
+
+.banner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+
+.profile{
+    margin-top: auto;
+  
+}
+
+.grid{
+    margin: auto;
+    display: flex;
+    width: 100%;
     flex-direction: column;
-    align-items: center;
+    margin-top: 15%;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    height: 100%;
+    
 }
 
 .profiledetails{
-    margin-top: 20px;
-    width: 70%;
+    background-color: #ffffff;
+    box-shadow:0px 1px 1px 1px lightslategray ;
+    border-radius: 2px;
+    margin-left: 15%;
+    width: 30%;
     display: flex;
     padding: 10px;
     gap: 5px;
-    border: 2px solid black;
+    grid-column: 1/3;
+    grid-row: 1;
+    justify-content: center;
+    align-items: center;
+    font-weight: 300;
+    font-family: 'Raleway', sans-serif;
+
 }
 
 .profiledivison1{
-    width:30%;
-    border: 2px dotted;
+    /* border: 2px dotted; */
+    margin-top: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:20px
+    gap:20px;
+    margin-left: auto;
+    justify-content: center;
+    text-align: center;
+    margin-right: auto;
+    height: 100%;
+    width: 100%;
 }
 
+.profilepic{
+    border: 2px solid;
+    max-width: 220px;
+    height: 220px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-top: 20px;
+    margin-left:auto;
+    margin-right: auto;
+    border-color: aliceblue;
+}
+
+.profilepic img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+
 .profiledivison2{
-    width:70%;
+
+    background-color: #ffffff;
+    box-shadow:0px 1px 1px 1px lightslategray ;
+    border-radius: 2px;
+    width: 30%;
     display: flex;
     flex-wrap: wrap;
-    max-height: 200px;
+    max-height: fit-content;
+    margin-top: 0px;
+    margin-left: 15%;
+    padding: 10px;
+    gap: 5px;
+    grid-column: 1/3;
+    grid-row: 2;
+    margin-bottom: 20px;
+
 }
 
 .profileeachdetail{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
+    align-items: center;
+    width: 100%;
     padding: 10px;
+    margin-bottom: 10px;
+    flex-direction: column;
+    box-shadow:0px 0px 1px 0px lightslategray ;
 }
 
+.profileeachdetail label {
+    display: inline-block;
+    margin-right: 10px;  
+    width: 100px;
+    font-weight:400;
+    font-family: 'Raleway', sans-serif;
+  }
+  
+  .profileeachdetail input {
+    display: inline-block;
+    width: 50%; 
+    
+  }
+
 .proin{
-    background: rgb(6, 6, 65);
-    border-radius: 5px;
-    color: aliceblue;
+    color: #fff;
     border: none;
+    width: 600px;
 }
 
 .profbut{
-    background: rgb(6, 6, 65);
-    border-radius: 5px;
+    /* background: rgb(6, 6, 65); */
+    width: 600px;
+    border-radius: 2px;
     border: none;
     cursor: pointer;
-    color: aliceblue;
+    color: #fff;
 }
 
 .adminprofiletable{
-    width: 70%;
+    height:100% ;
+    width: 100%;
     text-align: center;
-    table-layout: fixed
+    table-layout: fixed;
+    box-shadow: 0px 1px 1px 1px lightslategray;
+    margin-left: 40px;
+    border-collapse: collapse;
+    border: none;
+    margin-right: 10px;
 }
 
-.adminprofiletable th,td{
-    border: 1px solid;
+.adminprofiletable th {
+    border: none;
+  }
+
+.adminprofiletable th,
+.adminprofiletable td {
+  border: none;
+}
+
+.no-border th,
+.no-border td {
+  border: none;
+}
+    th:nth-child(2),
+    td:nth-child(2) {
+    width: 600px; /* Adjust the width as needed */
+    }
+
+.adminprofiletable tr{
+    tr:hover {background-color: lavenderblush;}
 }
 
 .guidedproject{
@@ -67,15 +201,35 @@
 }
 
 .guideskill{
+    margin-top: 5px;
     padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.profilepic{
-    border: 2px solid;
-    height: 100px;
-    width: 50%;
-    margin-top: 5px;
+.projectlist{
+    overflow: auto;
+    margin-top: 0px;
+    margin-left: 10px;
+    height: 100%;
+    width: 90%;
+    display:flex;
+    flex-direction: column;
+    grid-column: 2/4;
+    grid-row: 1;
+    margin-right: 60px;
+
+    background-color: #ffffff;
+    box-shadow:0px 1px 1px 1px lightslategray ;
+    border-radius: 3px;
 }
+
+.listheading{
+    margin-top: 20px;
+    margin-left: 40px;
+   font-weight: 200;
+   font-family: 'Exo 2';
+}
+
+
