--- a/client/src/pages/similarity/similarity.css
+++ b/client/src/pages/similarity/similarity.css
@@ -8,12 +8,17 @@
 .drop_box{
     width: 80%;
     box-shadow: 2px 2px 2px 2px #00143d;
+    background: rgb(255, 252, 252);
     border-radius: 5px;
     padding: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+}
+
+.drop_box h1,label{
+    font-weight: 800;
 }
 
 .drop-zone__input {
